--- a/PaymentCardScanner/src/main/res/values/colors.xml
+++ b/PaymentCardScanner/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="irdcs_camera_background">#992F3542</color>
-    <color name="irdcs_corner_color">#4CD964</color>
-    <color name="irdcs_white_background">#ffffffff</color>
-    <color name="irdcs_gray">#88888888</color>
+    <color name="camera_background">#DC0C0C0C</color>
+    <color name="corner_color">#ffffff</color>
+    <color name="white_background">#ffffffff</color>
+    <color name="gray">#66666666</color>
 </resources>
