--- a/PaymentCardScanner/src/main/res/layout/activity_scan_card.xml
+++ b/PaymentCardScanner/src/main/res/layout/activity_scan_card.xml
@@ -49,6 +49,24 @@
         app:layout_constraintTop_toTopOf="@+id/texture"
         app:layout_constraintVertical_bias="0.50" />
 
+
+    <TextView
+        android:id="@+id/positionCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="16dp"
+        android:gravity="center"
+        android:text="@string/position_card"
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardRectangle" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
