--- a/PaymentCardScanner/src/main/res/layout/activity_scan_card.xml
+++ b/PaymentCardScanner/src/main/res/layout/activity_scan_card.xml
@@ -96,6 +96,9 @@
         android:id="@+id/debugImageView"
         android:layout_width="80dp"
         android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
